--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       acknowledge the potential issues of data inequity, with missing data for
       lower-income countries and those with economic instability due to war,
       famine, and lasting impacts of the Covid-19 pandemic.</p>
-    <img src="file:///C:/Users/jjman/Desktop/209/Final%20Project/website/Picture1.png"
+    <img src="Picture1.png"
+
       alt="" title="Women's Advancement">
   </body>
 </html>
