Updated with better Navigation bar

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>About Us</title>
     <style>
         /* Add your CSS here */
@@ -41,38 +42,60 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="index.html">Women's Advancement</a> <a href="aboutus.html">About
-        Us</a> <a href="healthcare.html">Healthcare</a> <a href="education.html">Education</a>
-      <a href="marriage.html">Marriage</a> <a href="labor.html">Labor and
-        Finance</a> </div>
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
+
+          alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
+      </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
+        Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
+        Us</a> <a href="healthcare.html" style="font-size: 20px; line-height: 50px;">Healthcare</a>
+      <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
+      <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
+      <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
+        Finance</a>
+    </div>
     <h1 style="text-align: center;">About Us</h1>
     <p><br>
     </p>
     <p>This is our team!</p>
     <div>
-        <h2><a href="https://www.ischool.berkeley.edu/people/jose-delvalle">Jose Delvalle</a></h2>
-        <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/pic1_1.jpg?itok=VS5Qbw8F" alt="Jose Delvalle">
-        <p>Email: jdelvalle@ischool.berkeley.edu</p>
+      <h2><a href="https://www.ischool.berkeley.edu/people/jose-delvalle">Jose
+          Delvalle</a></h2>
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/pic1_1.jpg?itok=VS5Qbw8F"
+
+        alt="Jose Delvalle">
+      <p>Email: jdelvalle@ischool.berkeley.edu</p>
     </div>
     <div>
-        <h2><a href="https://www.ischool.berkeley.edu/people/maria-manna">Maria Manna</a></h2>
-        <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/fullscreen/public/default_images/avatar.jpeg?itok=8kRFVBA5" alt="Maria Manna">
-        <p>Email: mmanna@ischool.berkeley.edu</p>
+      <h2><a href="https://www.ischool.berkeley.edu/people/maria-manna">Maria
+          Manna</a></h2>
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/fullscreen/public/default_images/avatar.jpeg?itok=8kRFVBA5"
+
+        alt="Maria Manna">
+      <p>Email: mmanna@ischool.berkeley.edu</p>
     </div>
     <div>
-        <h2><a href="https://www.ischool.berkeley.edu/people/makenzie-muller">Makenzie Muller</a></h2>
-        <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/img_1424_1.jpg?itok=9FjZAQS5&c=d09a64637aadd2bc87dd6c2d35d2d104" alt="Makenzie Muller">
-        <p>Email: mmuller@ischool.berkeley.edu</p>
+      <h2><a href="https://www.ischool.berkeley.edu/people/makenzie-muller">Makenzie
+          Muller</a></h2>
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/profile_pictures/img_1424_1.jpg?itok=9FjZAQS5&amp;c=d09a64637aadd2bc87dd6c2d35d2d104"
+
+        alt="Makenzie Muller">
+      <p>Email: mmuller@ischool.berkeley.edu</p>
     </div>
     <div>
-        <h2><a href="https://www.ischool.berkeley.edu/people/lizzie-friend">Lizzie Friend</a></h2>
-        <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5" alt="Lizzie Friend">
-        <p>Email: lfriend@ischool.berkeley.edu</p>
+      <h2><a href="https://www.ischool.berkeley.edu/people/lizzie-friend">Lizzie
+          Friend</a></h2>
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5"
+
+        alt="Lizzie Friend">
+      <p>Email: lfriend@ischool.berkeley.edu</p>
     </div>
     <div>
-        <h2><a href="https://www.ischool.berkeley.edu/people/claudia-lokody-durkin">Claudia Lokody Durkin</a></h2>
-        <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5" alt="Claudia Lokody Durkin">
-        <p>Email: cdurkin@ischool.berkeley.edu</p>
+      <h2><a href="https://www.ischool.berkeley.edu/people/claudia-lokody-durkin">Claudia
+          Lokody Durkin</a></h2>
+      <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/profile_photo/public/default_images/avatar.jpeg?itok=FFFxAPq5"
+
+        alt="Claudia Lokody Durkin">
+      <p>Email: cdurkin@ischool.berkeley.edu</p>
     </div>
   </body>
 </html>
