--- a/healthcare.html
+++ b/healthcare.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Healthcare Indicator</title>
     <style>
         /* Add your CSS here */
@@ -37,10 +38,17 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="index.html">Women's Advancement</a> <a href="aboutus.html">About
-        Us</a> <a href="healthcare.html">Healthcare</a> <a href="education.html">Education</a>
-      <a href="marriage.html">Marriage</a> <a href="labor.html">Labor and
-        Finance</a> </div>
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
+
+          alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
+      </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
+        Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
+        Us</a> <a href="healthcare.html" style="font-size: 20px; line-height: 50px;">Healthcare</a>
+      <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
+      <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
+      <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
+        Finance</a>
+    </div>
     <h1 style="text-align: center;">Heath Care Indicator</h1>
     <p><br>
     </p>
@@ -112,6 +120,5 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);  
     </script>
-    
   </body>
 </html>
