--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Women's Advancement</title>
     <style>
         /* Add your CSS here */
@@ -34,10 +35,17 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="index.html">Women's Advancement</a> <a href="aboutus.html">About
-        Us</a> <a href="healthcare.html">Healthcare</a> <a href="education.html">Education</a>
-      <a href="marriage.html">Marriage</a> <a href="labor.html">Labor and
-        Finance</a> </div>
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
+
+          alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
+      </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
+        Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
+        Us</a> <a href="healthcare.html" style="font-size: 20px; line-height: 50px;">Healthcare</a>
+      <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
+      <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
+      <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
+        Finance</a>
+    </div>
     <h1 style="text-align: center;">&nbsp; Visualizing Women's Advancement</h1>
     <h1 style="text-align: center;">A Global View of Women's Educational,
       Financial, and Social Wellbeing</h1>
@@ -58,8 +66,7 @@
       acknowledge the potential issues of data inequity, with missing data for
       lower-income countries and those with economic instability due to war,
       famine, and lasting impacts of the Covid-19 pandemic.</p>
-    <img src="Picture1.png"
-
-      alt="" title="Women's Advancement">
+    <img src="Picture1.png" alt="" title="Women's Advancement">
+    
   </body>
 </html>
