--- a/labor.html
+++ b/labor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Labor and Finance Indicator</title>
     <style>
         /* Add your CSS here */
@@ -41,21 +42,25 @@
     </style>
   </head>
   <body>
-    <div class="navbar"> <a href="index.html">Women's Advancement</a> <a href="aboutus.html">About
-        Us</a> <a href="healthcare.html">Healthcare</a> <a href="education.html">Education</a>
-      <a href="marriage.html">Marriage</a> <a href="labor.html">Labor and
-        Finance</a> </div>
+    <div class="navbar"> <a href="https://www.berkeley.edu/"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California%2C_Berkeley.svg/600px-Seal_of_University_of_California%2C_Berkeley.svg.png?20160622010700"
+
+          alt="UC Berkeley Logo" style="height: 50px; width: 50px; float: left; padding-right: 10px;">
+      </a> <a href="index.html" style="font-size: 20px; line-height: 50px;">Women's
+        Advancement</a> <a href="aboutus.html" style="font-size: 20px; line-height: 50px;">About
+        Us</a> <a href="healthcare.html" style="font-size: 20px; line-height: 50px;">Healthcare</a>
+      <a href="education.html" style="font-size: 20px; line-height: 50px;">Education</a>
+      <a href="marriage.html" style="font-size: 20px; line-height: 50px;">Marriage</a>
+      <a href="labor.html" style="font-size: 20px; line-height: 50px;">Labor and
+        Finance</a>
+    </div>
     <h1 style="text-align: center;">Labor Indicator</h1>
     <p><br>
     </p>
-    <p>Generally, the age at first marriage for females
-      has been increasing over the past decades
-      globally. However, in some regions, growth
-      has stalled or has not been enduring.
-      East Asia has oscillated between ages in the
-      mid-twenties, peaking at age 26 in 1996, while
-      Latin America has experienced virtually no
-      growth and remains at age 23.</p>
+    <p>Generally, the age at first marriage for females has been increasing over
+      the past decades globally. However, in some regions, growth has stalled or
+      has not been enduring. East Asia has oscillated between ages in the
+      mid-twenties, peaking at age 26 in 1996, while Latin America has
+      experienced virtually no growth and remains at age 23.</p>
     <div class="tableauPlaceholder" id="viz1689536020893" style="position: relative"><noscript><a
 
 href="#"><img alt="Dashboard 4 " src="https://public.tableau.com/static/images/Ma/MarriageIndicatorScoreDashboard/Dashboard4/1_rss.png"
@@ -97,6 +102,5 @@ style="border: none"></a></noscript><object class="tableauViz" style="display:no
 
           value="en-US"></object></div>
     <script type="text/javascript">                    var divElement = document.getElementById('viz1689536210282');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='1400px';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-    
   </body>
 </html>
